<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerCl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/primaryBlue">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settingsToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:title="@string/title_settings"
        app:titleCentered="true"
        app:titleTextColor="@color/white" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/settingsNsv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/exitButton"
        app:layout_constraintTop_toBottomOf="@id/settingsToolbar">

        <LinearLayout
            android:id="@+id/settingsLl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_l_24"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingBottom="100dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_m_16"
                android:text="@string/threshold_max"
                android:textAppearance="@style/TextDmSans.Medium.M_16"
                android:textColor="@color/white" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etThresholdMaxSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_m_16"
                android:theme="@style/MyTextInputLayout_overlay"
                app:hintTextColor="@color/white"
                app:suffixText="°C"
                app:suffixTextColor="@color/green"
                tools:visibility="invisible">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textColor="@color/white"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_m_16"
                android:layout_marginTop="@dimen/dimen_m_16"
                android:text="@string/threshold_min"
                android:textAppearance="@style/TextDmSans.Medium.M_16"
                android:textColor="@color/white" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etThresholdMinSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_m_16"
                android:theme="@style/MyTextInputLayout_overlay"
                app:hintTextColor="@color/white"
                app:suffixText="°C"
                app:suffixTextColor="@color/green"
                tools:visibility="invisible">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textColor="@color/white"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/exitButton"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_l_24"
        android:text="@string/exit"
        android:textAppearance="@style/TextDmSans.Bold"
        android:textColor="@color/orange"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>